--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Stop Repeating Yourself
+Project Speak Easy
 Andrea Holloway, Seth Holloway, Shayne Czyzewski
 
 An online accent modification services site.
